kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: giropops-senhas
  labels:
    app: giropops-senhas
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "5000"  # Porta onde o Prometheus irá coletar as métricas
    prometheus.io/path: "/metrics"  # Path das métricas
spec:
  selector:
    app: giropops-senhas
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: tcp-app
  type: ClusterIP
